feat: create an API to provide automatic checks of DB migrations (#172)
