# pkg/observer/observer.go
@@ -6,18 +6,20 @@
 package observer
 
 import (
-	"encoding/json"
-	"fmt"
+	"bytes"
+	"context"
+	"encoding/csv"
 	"io"
-	"io/ioutil"
-	"strings"
+	"os"
+	"sync"
 	"time"
 
+	"github.com/docker/docker/client"
 	"github.com/pkg/errors"
 
+	"gitlab.com/postgres-ai/database-lab/pkg/client/platform"
 	"gitlab.com/postgres-ai/database-lab/pkg/log"
-	"gitlab.com/postgres-ai/database-lab/pkg/models"
-	"gitlab.com/postgres-ai/database-lab/pkg/util"
+	"gitlab.com/postgres-ai/database-lab/pkg/util/pglog"
 )
 
 const (
@@ -25,200 +27,165 @@ const (
 	defaultMaxLockDurationSeconds = 10
 	defaultMaxDurationSeconds     = 60 * 60 // 1 hour.
 
-	stateFilePath = "/tmp/dblab-observe-state.json"
+	statusPassed = "passed"
+	statusFailed = "failed"
+
+	observerApplicationName = "observer"
 )
+
+// Observer manages observation sessions.
+type Observer struct {
+	dockerClient *client.Client
+	Platform     *platform.Client
+	storage      map[string]*Session
+	sessionMu    *sync.Mutex
+	cfg          *Config
+}
 
 // Config defines configuration options for observer.
 type Config struct {
-	Follow                 bool   `json:"follow"`
-	IntervalSeconds        uint64 `json:"intervalSeconds"`
-	MaxLockDurationSeconds uint64 `json:"maxLockDurationSeconds"`
-	MaxDurationSeconds     uint64 `json:"maxDurationSeconds"`
-	SSLMode                string `json:"sslmode"`
+	CloneDir  string
+	SocketDir string
 }
 
-// Observer defines monitoring service.
-type Observer struct {
-	StartedAt      time.Time     `json:"startedAt"`
-	Elapsed        time.Duration `json:"elapsed"`
-	CounterTotal   uint64        `json:"counterTotal"`
-	CounterWarning uint64        `json:"counterWarning"`
-	CounterSuccess uint64        `json:"counterSuccess"`
-	Config         Config        `json:"config"`
-
-	writer io.Writer
-}
-
-// NewObserver creates Observer instance.
-func NewObserver(config Config, writer io.Writer) *Observer {
-	if config.IntervalSeconds == 0 {
-		config.IntervalSeconds = defaultIntervalSeconds
-	}
-
-	if config.MaxLockDurationSeconds == 0 {
-		config.MaxLockDurationSeconds = defaultMaxLockDurationSeconds
-	}
-
-	if config.MaxDurationSeconds == 0 {
-		config.MaxDurationSeconds = defaultMaxDurationSeconds
-	}
-
+// NewObserver creates an Observer instance.
+func NewObserver(dockerClient *client.Client, cfg *Config, platform *platform.Client) *Observer {
 	return &Observer{
-		Config: config,
-		writer: writer,
+		dockerClient: dockerClient,
+		Platform:     platform,
+		storage:      make(map[string]*Session),
+		sessionMu:    &sync.Mutex{},
+		cfg:          cfg,
 	}
 }
 
-// Start runs clone monitoring.
-func (obs *Observer) Start(clone *models.Clone) error {
-	log.Dbg("Start observing...")
+// GetCloneLog gets clone logs.
+// TODO (akartasov): Split log to chunks.
+func (o *Observer) GetCloneLog(ctx context.Context, port uint, session *Session) ([]byte, error) {
+	fileSelector := pglog.NewSelector(o.cfg.CloneDir, port)
+	fileSelector.SetMinimumTime(session.StartedAt)
 
-	db, err := initConnection(clone, obs.Config.SSLMode)
-	if err != nil {
-		return errors.Wrap(err, "cannot connect to database")
+	if err := fileSelector.DiscoverLogDir(); err != nil {
+		return nil, errors.Wrap(err, "failed to init file selector")
 	}
 
-	obs.StartedAt = time.Now()
+	buf := bytes.NewBuffer(make([]byte, 0, len(session.CsvFields())))
+	buf.WriteString(session.CsvFields())
+	buf.WriteString("\n")
 
 	for {
-		now := time.Now()
-		obs.Elapsed = time.Since(obs.StartedAt)
-
-		var output strings.Builder
-
-		output.WriteString(fmt.Sprintf("[%s] Database Lab Observer:\n", util.FormatTime(now)))
-		output.WriteString(fmt.Sprintf("  Elapsed: %s\n", util.DurationToString(obs.Elapsed)))
-		output.WriteString("  Dangerous locks:\n")
-
-		dangerousLocks, err := runQuery(db, buildLocksMetricQuery(obs.Config.MaxLockDurationSeconds))
+		filename, err := fileSelector.Next()
 		if err != nil {
-			return errors.Wrap(err, "cannot query metrics")
+			if err == pglog.ErrLastFile {
+				break
+			}
+
+			return nil, errors.Wrap(err, "failed to get a CSV log filename")
 		}
 
-		obs.CounterTotal++
+		if err := o.processCSVLogFile(ctx, buf, filename, session.StartedAt, session.FinishedAt); err != nil {
+			if err == pglog.ErrTimeBoundary {
+				break
+			}
 
-		if len(dangerousLocks) > 0 {
-			obs.CounterWarning++
-		} else {
-			dangerousLocks = "    Not observed\n"
-			obs.CounterSuccess++
+			return nil, errors.Wrap(err, "failed to process a CSV log file")
 		}
+	}
 
-		output.WriteString(dangerousLocks)
+	return buf.Bytes(), nil
+}
 
-		output.WriteString("  Observed intervals:\n")
-		output.WriteString(fmt.Sprintf("    Successful: %d\n", obs.CounterSuccess))
-		output.WriteString(fmt.Sprintf("    With dangerous locks: %d\n", obs.CounterWarning))
+func (o *Observer) processCSVLogFile(ctx context.Context, buf io.Writer, filename string, since, until time.Time) error {
+	logFile, err := os.Open(filename)
+	if err != nil {
+		return errors.Wrap(err, "failed to open a CSV log file")
+	}
 
-		_, err = fmt.Fprintln(obs.writer, output.String())
-		if err != nil {
-			return errors.Wrap(err, "cannot print")
+	defer func() {
+		if err := logFile.Close(); err != nil {
+			log.Errf("Failed to close a CSV log file: %s", err.Error())
 		}
+	}()
 
-		err = obs.SaveObserverState()
-		if err != nil {
-			return errors.Wrap(err, "cannot save observer state")
-		}
+	if err := o.scanCSVLogFile(ctx, logFile, buf, since, until); err != nil {
+		return err
+	}
 
-		if !obs.Config.Follow {
+	return nil
+}
+
+func (o *Observer) scanCSVLogFile(ctx context.Context, reader io.Reader, writer io.Writer, since, until time.Time) error {
+	csvReader := csv.NewReader(reader)
+	csvWriter := csv.NewWriter(writer)
+
+	defer csvWriter.Flush()
+
+	for {
+		if ctx.Err() != nil {
 			break
 		}
 
-		time.Sleep(time.Duration(obs.Config.IntervalSeconds) * time.Second)
+		entry, err := csvReader.Read()
+		if err != nil {
+			if err == io.EOF {
+				break
+			}
+
+			return err
+		}
+
+		// Check an application name to skip observer log entries.
+		if entry[22] == observerApplicationName {
+			continue
+		}
+
+		logTime, err := time.Parse("2006-01-02 15:04:05.999 MST", entry[0])
+		if err != nil {
+			return err
+		}
+
+		if logTime.Before(since) {
+			continue
+		}
+
+		if logTime.After(until) {
+			return pglog.ErrTimeBoundary
+		}
+
+		if err := csvWriter.Write(entry); err != nil {
+			return err
+		}
 	}
 
 	return nil
 }
 
-// SaveObserverState saves observer state to the disk.
-func (obs *Observer) SaveObserverState() error {
-	bytes, err := json.MarshalIndent(obs, "", "  ")
-	if err != nil {
-		return err
+// AddSession adds a new observation session to storage.
+func (o *Observer) AddSession(cloneID string, session *Session) {
+	o.sessionMu.Lock()
+	defer o.sessionMu.Unlock()
+	session.socketDir = o.cfg.SocketDir
+
+	o.storage[cloneID] = session
+}
+
+// GetSession returns an observation session from storage.
+func (o *Observer) GetSession(cloneID string) (*Session, error) {
+	o.sessionMu.Lock()
+	defer o.sessionMu.Unlock()
+
+	session, ok := o.storage[cloneID]
+	if !ok {
+		return nil, errors.New("observer not found")
 	}
 
-	err = ioutil.WriteFile(stateFilePath, bytes, 0644)
-	if err != nil {
-		return err
-	}
-
-	return nil
+	return session, nil
 }
 
-// LoadObserverState loads observer state from the disk.
-func (obs *Observer) LoadObserverState() error {
-	bytes, err := ioutil.ReadFile(stateFilePath)
-	if err != nil {
-		return err
-	}
+// RemoveSession removes an observation session from storage.
+func (o *Observer) RemoveSession(cloneID string) {
+	o.sessionMu.Lock()
+	defer o.sessionMu.Unlock()
 
-	err = json.Unmarshal(bytes, &obs)
-	if err != nil {
-		return err
-	}
-
-	return nil
-}
-
-// PrintSummary prints monitoring summary.
-func (obs *Observer) PrintSummary() error {
-	maxDuration := time.Duration(obs.Config.MaxDurationSeconds) * time.Second
-
-	var summary strings.Builder
-
-	summary.WriteString("Summary:\n")
-	summary.WriteString(formatSummaryItem(fmt.Sprintf("Duration: %s", util.DurationToString(obs.Elapsed))))
-	summary.WriteString(formatSummaryItem(fmt.Sprintf("Intervals with dangerous locks: %d", obs.CounterWarning)))
-	summary.WriteString(formatSummaryItem(fmt.Sprintf("Total number of observed intervals: %d", obs.CounterTotal)))
-	summary.WriteString("\nPerformance checklist:\n")
-	summary.WriteString(formatChecklistItem(fmt.Sprintf("Duration < %s", util.DurationToString(maxDuration)), obs.CheckDuration()))
-	summary.WriteString(formatChecklistItem("No dangerous locks", obs.CheckLocks()))
-
-	_, err := fmt.Fprint(obs.writer, summary.String())
-	if err != nil {
-		return errors.Wrap(err, "cannot print")
-	}
-
-	return nil
-}
-
-// CheckPerformanceRequirements checks monitoring data and returns an error if any of performance requires was not satisfied.
-func (obs *Observer) CheckPerformanceRequirements() error {
-	if !obs.CheckDuration() || !obs.CheckLocks() {
-		return errors.New("performance requirements not satisfied")
-	}
-
-	return nil
-}
-
-// CheckDuration checks duration of the operation.
-func (obs *Observer) CheckDuration() bool {
-	return obs.Elapsed < time.Duration(obs.Config.MaxDurationSeconds)*time.Second
-}
-
-// CheckLocks checks long-lasting locks during the operation.
-func (obs *Observer) CheckLocks() bool {
-	return obs.CounterWarning == 0
-}
-
-func formatSummaryItem(str string) string {
-	return "  " + str + "\n"
-}
-
-func formatChecklistItem(str string, state bool) string {
-	stateStr := colorizeRed("FAILED")
-
-	if state {
-		stateStr = colorizeGreen("PASSED")
-	}
-
-	return "  " + str + ": " + stateStr + "\n"
-}
-
-func colorizeRed(str string) string {
-	return fmt.Sprintf("\033[1;31m%s\033[0m", str)
-}
-
-func colorizeGreen(str string) string {
-	return fmt.Sprintf("\033[1;32m%s\033[0m", str)
+	delete(o.storage, cloneID)
 }
